bamoe-app/4-bamoe-services/3-task-console/task-console-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yml
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: task-console
  name: task-console
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: task-console
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../docker-compose.yml
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: task-console
    spec:
      containers:
        - env:
            - name: QUARKUS_HTTP_CORS_ORIGINS
              value: /.*/
            - name: RUNTIME_TOOLS_TASK_CONSOLE_DATA_INDEX_ENDPOINT
              value: http://data-index.bamoe-canvas-3cd0ec11030dfa215f262137faf739f1-0000.eu-gb.containers.appdomain.cloud/graphql
          image: quay.io/bamoe/task-console:9.1.0-ibm-0001
          name: bamoe-poc-task-console
          ports:
            - containerPort: 8080
              protocol: TCP
      restartPolicy: Always
